PROJECTS/projectspace/force-app/main/default/objects/Property__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Property_Name__c</columns>
    <columns>Type__c</columns>
    <columns>Location__c</columns>
    <columns>Verified__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>